crates/fig-lexer/tests/snapshots/integration_tests__control_flow__while_basic.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: count_down
- LParen
- Ident: n
- Colon
- I32
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- While
- Ident: n
- Gt
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Pass
- Newline
- Dedent
- Dedent
